[java-completion] VmOptionsCompletionContributor: display documentation (draft)
Also: read --add-opens, etc. options directly from help.
Also: fix parsing in Java 8

GitOrigin-RevId: 004c1b3d7ac66f50ef1283b5379fd1509ac02022